WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220638
[LFC][Integration] REGRESSION (
r270123
) facebook.com birthday dropdown do not work when creating new account
https://bugs.webkit.org/show_bug.cgi?id=220638
Summary
[LFC][Integration] REGRESSION (r270123) facebook.com birthday dropdown do not...
alan
Reported
2021-01-14 15:52:00 PST
<
rdar://problem/73175259
>
Attachments
Patch
(4.65 KB, patch)
2021-01-14 16:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-01-14 16:20:59 PST
Created
attachment 417668
[details]
Patch
EWS
Comment 2
2021-01-15 04:39:46 PST
Committed
r271516
: <
https://trac.webkit.org/changeset/271516
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417668
[details]
.
Antoine Quint
Comment 3
2021-02-06 13:38:32 PST
***
Bug 221516
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug